--- a/htaccess/.htaccess
+++ b/htaccess/.htaccess
@@ -1392,7 +1392,6 @@ Deny from 8.222.64.0/20
 Deny from 8.222.128.0/17
 Deny from 8.242.22.0/24
 Deny from 12.168.78.138/32
-Deny from 12.171.92.0/23
 Deny from 12.177.85.0/24
 Deny from 12.202.147.0/24
 Deny from 12.215.240.0/21
@@ -4375,7 +4374,6 @@ Deny from 37.221.248.251/32
 Deny from 37.221.251.74/32
 Deny from 37.222.64.215/32
 Deny from 37.222.64.242/32
-Deny from 37.224.77.0/24
 Deny from 37.228.112.0/21
 Deny from 37.228.128.0/23
 Deny from 37.228.149.0/24
@@ -5289,7 +5287,6 @@ Deny from 41.75.122.24/32
 Deny from 41.75.123.61/32
 Deny from 41.76.117.170/32
 Deny from 41.76.117.182/32
-Deny from 41.77.0.0/21
 Deny from 41.77.142.0/23
 Deny from 41.77.208.0/22
 Deny from 41.86.21.0/24
@@ -10700,10 +10697,6 @@ Deny from 60.51.17.105/32
 Deny from 60.51.73.151/32
 Deny from 60.52.25.113/32
 Deny from 60.53.33.40/32
-Deny from 60.87.3.0/24
-Deny from 60.87.4.0/23
-Deny from 60.87.10.0/23
-Deny from 60.87.12.0/24
 Deny from 60.169.47.16/32
 Deny from 60.174.215.110/32
 Deny from 60.174.249.111/32
@@ -10775,9 +10768,7 @@ Deny from 61.11.224.0/19
 Deny from 61.14.208.0/22
 Deny from 61.14.224.0/22
 Deny from 61.16.129.238/32
-Deny from 61.19.5.0/24
-Deny from 61.19.11.0/24
-Deny from 61.19.12.0/23
+Deny from 61.19.12.0/24
 Deny from 61.32.133.148/32
 Deny from 61.32.133.198/32
 Deny from 61.33.10.30/32
@@ -11270,7 +11261,9 @@ Deny from 64.20.32.0/19
 Deny from 64.20.208.0/22
 Deny from 64.20.224.0/19
 Deny from 64.21.0.0/17
-Deny from 64.21.128.0/18
+Deny from 64.21.128.0/19
+Deny from 64.21.160.0/20
+Deny from 64.21.176.0/21
 Deny from 64.22.192.0/19
 Deny from 64.23.96.0/19
 Deny from 64.23.128.0/20
@@ -12301,7 +12294,8 @@ Deny from 67.218.199.0/24
 Deny from 67.218.200.0/21
 Deny from 67.219.16.0/20
 Deny from 67.219.96.0/20
-Deny from 67.219.128.0/20
+Deny from 67.219.137.0/24
+Deny from 67.219.138.0/23
 Deny from 67.219.180.0/24
 Deny from 67.219.240.0/23
 Deny from 67.219.246.0/23
@@ -12432,6 +12426,7 @@ Deny from 68.232.191.0/24
 Deny from 68.233.40.0/24
 Deny from 68.233.43.0/24
 Deny from 68.233.96.0/19
+Deny from 68.233.174.0/24
 Deny from 68.233.224.0/19
 Deny from 68.234.40.0/23
 Deny from 68.234.44.0/24
@@ -12490,7 +12485,6 @@ Deny from 69.16.190.0/23
 Deny from 69.16.192.0/18
 Deny from 69.20.0.0/17
 Deny from 69.22.150.0/23
-Deny from 69.22.154.0/23
 Deny from 69.25.0.0/17
 Deny from 69.25.128.0/18
 Deny from 69.25.192.0/19
@@ -13577,7 +13571,6 @@ Deny from 77.223.156.0/24
 Deny from 77.223.158.0/24
 Deny from 77.232.36.0/22
 Deny from 77.232.40.0/22
-Deny from 77.232.97.0/24
 Deny from 77.232.160.199/32
 Deny from 77.232.160.212/32
 Deny from 77.232.162.99/32
@@ -17928,7 +17921,6 @@ Deny from 91.229.6.0/24
 Deny from 91.229.18.0/23
 Deny from 91.229.20.0/24
 Deny from 91.229.23.0/24
-Deny from 91.229.32.0/23
 Deny from 91.229.35.0/24
 Deny from 91.229.44.0/23
 Deny from 91.229.52.0/22
@@ -21910,8 +21902,7 @@ Deny from 103.167.32.0/22
 Deny from 103.167.40.0/23
 Deny from 103.167.134.0/23
 Deny from 103.167.150.0/23
-Deny from 103.167.153.0/24
-Deny from 103.167.154.0/23
+Deny from 103.167.152.0/22
 Deny from 103.167.182.0/23
 Deny from 103.167.200.0/24
 Deny from 103.167.212.0/23
@@ -26033,6 +26024,7 @@ Deny from 115.97.192.0/24
 Deny from 115.97.196.0/22
 Deny from 115.97.206.0/24
 Deny from 115.97.255.0/24
+Deny from 115.112.5.0/24
 Deny from 115.124.16.0/20
 Deny from 115.124.96.0/19
 Deny from 115.126.25.0/24
@@ -27406,7 +27398,6 @@ Deny from 122.155.195.81/32
 Deny from 122.155.195.144/32
 Deny from 122.155.201.129/32
 Deny from 122.155.201.136/32
-Deny from 122.155.239.0/24
 Deny from 122.156.42.184/32
 Deny from 122.159.177.0/24
 Deny from 122.159.178.166/32
@@ -28096,7 +28087,6 @@ Deny from 125.235.239.0/24
 Deny from 125.252.192.0/18
 Deny from 125.253.112.0/20
 Deny from 125.254.53.34/32
-Deny from 126.147.252.0/22
 Deny from 128.0.41.0/24
 Deny from 128.0.68.0/23
 Deny from 128.0.128.0/20
@@ -28395,7 +28385,6 @@ Deny from 130.248.227.0/24
 Deny from 130.248.228.0/24
 Deny from 130.248.231.0/24
 Deny from 130.248.237.0/24
-Deny from 130.250.64.0/19
 Deny from 130.250.188.0/22
 Deny from 130.254.32.0/21
 Deny from 130.254.40.0/22
@@ -29417,7 +29406,6 @@ Deny from 141.22.28.16/32
 Deny from 141.22.28.227/32
 Deny from 141.40.0.0/16
 Deny from 141.84.0.0/16
-Deny from 141.92.12.0/23
 Deny from 141.93.12.0/24
 Deny from 141.93.16.0/22
 Deny from 141.93.32.0/24
@@ -32679,21 +32667,16 @@ Deny from 165.254.44.0/23
 Deny from 165.254.50.0/23
 Deny from 165.254.52.0/24
 Deny from 165.254.81.0/24
-Deny from 165.254.82.0/24
 Deny from 165.254.96.0/24
 Deny from 165.254.107.0/24
 Deny from 165.254.110.0/23
 Deny from 165.254.123.0/24
-Deny from 165.254.133.0/24
 Deny from 165.254.136.0/24
-Deny from 165.254.138.0/24
 Deny from 165.254.141.0/24
 Deny from 165.254.142.0/24
 Deny from 165.254.150.0/24
 Deny from 165.254.156.0/23
 Deny from 165.254.206.0/23
-Deny from 165.254.212.0/23
-Deny from 165.254.215.0/24
 Deny from 165.254.240.0/23
 Deny from 166.0.1.0/24
 Deny from 166.0.4.0/24
@@ -33005,9 +32988,7 @@ Deny from 168.121.220.0/22
 Deny from 168.121.236.0/22
 Deny from 168.126.250.250/32
 Deny from 168.138.0.0/16
-Deny from 168.143.240.0/24
 Deny from 168.143.242.0/23
-Deny from 168.143.252.0/24
 Deny from 168.143.254.0/23
 Deny from 168.149.240.0/21
 Deny from 168.151.0.0/22
@@ -33269,8 +33250,8 @@ Deny from 170.187.144.0/20
 Deny from 170.187.160.0/19
 Deny from 170.187.192.0/18
 Deny from 170.199.192.0/21
-Deny from 170.199.200.0/23
-Deny from 170.199.202.0/24
+Deny from 170.199.200.0/22
+Deny from 170.199.207.0/24
 Deny from 170.199.224.0/21
 Deny from 170.200.94.0/24
 Deny from 170.203.16.0/20
@@ -33672,7 +33653,11 @@ Deny from 172.102.216.0/23
 Deny from 172.102.219.0/24
 Deny from 172.102.220.0/22
 Deny from 172.103.32.0/22
-Deny from 172.104.0.0/17
+Deny from 172.104.4.0/22
+Deny from 172.104.8.0/21
+Deny from 172.104.16.0/20
+Deny from 172.104.32.0/19
+Deny from 172.104.64.0/18
 Deny from 172.104.128.0/18
 Deny from 172.104.192.0/21
 Deny from 172.104.200.0/22
@@ -39536,7 +39521,6 @@ Deny from 186.202.192.0/23
 Deny from 186.202.195.0/24
 Deny from 186.202.200.0/21
 Deny from 186.202.208.0/20
-Deny from 186.211.197.0/24
 Deny from 186.225.194.78/32
 Deny from 186.226.156.115/32
 Deny from 186.226.156.116/32
@@ -39610,8 +39594,6 @@ Deny from 187.122.248.194/32
 Deny from 187.130.139.197/32
 Deny from 187.141.129.82/32
 Deny from 187.141.129.86/32
-Deny from 187.141.187.0/24
-Deny from 187.141.188.0/23
 Deny from 187.150.159.160/32
 Deny from 187.150.163.67/32
 Deny from 187.150.173.161/32
@@ -40334,9 +40316,6 @@ Deny from 189.243.218.164/32
 Deny from 189.243.218.190/32
 Deny from 189.243.218.229/32
 Deny from 189.245.206.67/32
-Deny from 189.247.64.0/24
-Deny from 189.247.192.0/23
-Deny from 189.247.194.0/24
 Deny from 189.247.204.0/22
 Deny from 189.247.209.0/24
 Deny from 189.247.210.0/23
@@ -44413,6 +44392,7 @@ Deny from 198.15.128.0/17
 Deny from 198.16.32.0/19
 Deny from 198.17.127.0/24
 Deny from 198.17.215.0/24
+Deny from 198.18.25.0/24
 Deny from 198.19.24.0/24
 Deny from 198.20.16.0/20
 Deny from 198.20.64.0/18
@@ -45324,9 +45304,7 @@ Deny from 200.229.28.0/22
 Deny from 200.232.114.0/24
 Deny from 200.234.192.0/19
 Deny from 200.236.112.0/20
-Deny from 201.0.217.0/24
 Deny from 201.13.191.186/32
-Deny from 201.16.50.0/24
 Deny from 201.20.0.0/20
 Deny from 201.20.16.0/23
 Deny from 201.20.32.0/19
@@ -45343,7 +45321,6 @@ Deny from 201.47.83.39/32
 Deny from 201.49.214.0/23
 Deny from 201.49.219.0/24
 Deny from 201.52.64.100/32
-Deny from 201.63.94.0/24
 Deny from 201.71.2.153/32
 Deny from 201.76.32.0/19
 Deny from 201.77.114.10/32
@@ -45474,6 +45451,7 @@ Deny from 201.210.253.2/32
 Deny from 201.210.254.3/32
 Deny from 201.217.240.0/22
 Deny from 201.218.125.178/32
+Deny from 201.220.10.0/24
 Deny from 201.221.128.58/32
 Deny from 201.221.129.134/32
 Deny from 201.221.129.139/32
@@ -46262,8 +46240,6 @@ Deny from 204.2.164.0/23
 Deny from 204.2.189.0/24
 Deny from 204.2.196.0/24
 Deny from 204.2.232.0/24
-Deny from 204.2.243.0/24
-Deny from 204.2.254.0/24
 Deny from 204.8.5.0/24
 Deny from 204.8.28.0/24
 Deny from 204.8.30.0/24
@@ -46377,7 +46353,6 @@ Deny from 204.90.106.0/24
 Deny from 204.91.96.0/20
 Deny from 204.91.136.0/21
 Deny from 204.93.38.0/23
-Deny from 204.93.46.0/23
 Deny from 204.93.48.0/24
 Deny from 204.93.128.0/17
 Deny from 204.106.128.0/18
@@ -46453,6 +46428,7 @@ Deny from 204.194.64.0/21
 Deny from 204.194.222.0/23
 Deny from 204.197.172.0/24
 Deny from 204.201.160.0/24
+Deny from 204.209.72.0/23
 Deny from 204.216.104.0/21
 Deny from 204.216.112.0/23
 Deny from 204.216.116.0/22
@@ -46494,8 +46470,6 @@ Deny from 204.235.16.0/20
 Deny from 204.235.60.0/22
 Deny from 204.236.128.0/17
 Deny from 204.237.142.0/23
-Deny from 204.237.173.0/24
-Deny from 204.237.183.0/24
 Deny from 204.237.186.0/23
 Deny from 204.237.188.0/24
 Deny from 204.238.35.0/24
@@ -46919,7 +46893,6 @@ Deny from 206.232.120.0/21
 Deny from 206.237.8.0/23
 Deny from 206.237.16.0/20
 Deny from 206.237.128.0/18
-Deny from 206.239.100.0/23
 Deny from 206.245.164.0/24
 Deny from 206.251.16.0/21
 Deny from 206.252.136.0/24
@@ -47463,7 +47436,6 @@ Deny from 209.59.192.0/19
 Deny from 209.59.228.0/22
 Deny from 209.59.247.0/24
 Deny from 209.61.128.0/18
-Deny from 209.65.14.0/23
 Deny from 209.66.0.0/18
 Deny from 209.66.128.0/19
 Deny from 209.71.36.0/24
@@ -48650,6 +48622,7 @@ Deny from 213.209.157.0/24
 Deny from 213.209.158.0/23
 Deny from 213.210.67.186/32
 Deny from 213.210.73.0/24
+Deny from 213.210.216.0/24
 Deny from 213.217.10.0/23
 Deny from 213.219.36.0/22
 Deny from 213.219.192.0/20
@@ -50155,17 +50128,14 @@ Deny from 2001:418:1401:4::/64
 Deny from 2001:418:1401:7::/64
 Deny from 2001:418:1401:18::/64
 Deny from 2001:418:1401:1c::/64
-Deny from 2001:418:1401:1e::/64
 Deny from 2001:418:1401:21::/64
 Deny from 2001:418:1401:25::/64
 Deny from 2001:418:1401:2c::/64
-Deny from 2001:418:1401:63::/64
 Deny from 2001:418:1401:6a::/64
 Deny from 2001:418:1401:70::/63
 Deny from 2001:418:1401:7d::/64
 Deny from 2001:418:1401:300::/56
 Deny from 2001:418:1401:400::/55
-Deny from 2001:418:144b:200::/56
 Deny from 2001:418:1c01:1::/64
 Deny from 2001:418:2401:1::/64
 Deny from 2001:418:4001:2::/64
@@ -50173,8 +50143,6 @@ Deny from 2001:418:4001:4::/64
 Deny from 2001:418:8404::/63
 Deny from 2001:428:2001:205::/64
 Deny from 2001:428:2001:302::/64
-Deny from 2001:428:4402:400::/56
-Deny from 2001:428:4405:200::/56
 Deny from 2001:438:fffd:13::/64
 Deny from 2001:438:fffd:6c::/64
 Deny from 2001:470:1::/48
@@ -50642,7 +50610,6 @@ Deny from 2001:4838::/32
 Deny from 2001:4858::/32
 Deny from 2001:4878:3::/48
 Deny from 2001:4878:7::/48
-Deny from 2001:4878:8::/48
 Deny from 2001:4878:27::/48
 Deny from 2001:4878:31::/48
 Deny from 2001:4878:37::/48
@@ -50650,9 +50617,9 @@ Deny from 2001:4878:38::/47
 Deny from 2001:4878:48::/48
 Deny from 2001:4878:62::/47
 Deny from 2001:4878:103::/48
-Deny from 2001:4878:136::/48
 Deny from 2001:4878:151::/48
 Deny from 2001:4878:164::/48
+Deny from 2001:4878:173::/48
 Deny from 2001:4878:1e0::/44
 Deny from 2001:4878:204::/48
 Deny from 2001:4878:215::/48
@@ -50662,12 +50629,11 @@ Deny from 2001:4878:225::/48
 Deny from 2001:4878:228::/48
 Deny from 2001:4878:246::/48
 Deny from 2001:4878:321::/48
-Deny from 2001:4878:322::/47
+Deny from 2001:4878:323::/48
 Deny from 2001:4878:324::/48
 Deny from 2001:4878:347::/48
 Deny from 2001:4878:356::/48
 Deny from 2001:4878:2007::/48
-Deny from 2001:4878:2008::/48
 Deny from 2001:4878:2027::/48
 Deny from 2001:4878:2031::/48
 Deny from 2001:4878:2037::/48
@@ -50676,9 +50642,9 @@ Deny from 2001:4878:2048::/48
 Deny from 2001:4878:2055::/48
 Deny from 2001:4878:2062::/47
 Deny from 2001:4878:2103::/48
-Deny from 2001:4878:2136::/48
 Deny from 2001:4878:2151::/48
 Deny from 2001:4878:2164::/48
+Deny from 2001:4878:2173::/48
 Deny from 2001:4878:21e0::/44
 Deny from 2001:4878:2204::/48
 Deny from 2001:4878:2215::/48
@@ -50688,14 +50654,13 @@ Deny from 2001:4878:2225::/48
 Deny from 2001:4878:2228::/48
 Deny from 2001:4878:2246::/48
 Deny from 2001:4878:2321::/48
-Deny from 2001:4878:2322::/47
+Deny from 2001:4878:2323::/48
 Deny from 2001:4878:2324::/48
 Deny from 2001:4878:2347::/48
 Deny from 2001:4878:2356::/48
 Deny from 2001:4878:4001::/48
 Deny from 2001:4878:4003::/48
 Deny from 2001:4878:4007::/48
-Deny from 2001:4878:4008::/48
 Deny from 2001:4878:4027::/48
 Deny from 2001:4878:4031::/48
 Deny from 2001:4878:4037::/48
@@ -50703,8 +50668,8 @@ Deny from 2001:4878:4038::/48
 Deny from 2001:4878:4055::/48
 Deny from 2001:4878:4062::/47
 Deny from 2001:4878:4103::/48
-Deny from 2001:4878:4136::/48
 Deny from 2001:4878:4164::/48
+Deny from 2001:4878:4173::/48
 Deny from 2001:4878:41e0::/44
 Deny from 2001:4878:4204::/48
 Deny from 2001:4878:4215::/48
@@ -50713,11 +50678,10 @@ Deny from 2001:4878:4220::/48
 Deny from 2001:4878:4225::/48
 Deny from 2001:4878:4246::/48
 Deny from 2001:4878:4321::/48
-Deny from 2001:4878:4322::/47
+Deny from 2001:4878:4323::/48
 Deny from 2001:4878:4324::/48
 Deny from 2001:4878:4347::/48
 Deny from 2001:4878:8007::/48
-Deny from 2001:4878:8008::/48
 Deny from 2001:4878:8027::/48
 Deny from 2001:4878:8031::/48
 Deny from 2001:4878:8037::/48
@@ -50725,9 +50689,9 @@ Deny from 2001:4878:8038::/48
 Deny from 2001:4878:8048::/48
 Deny from 2001:4878:8062::/47
 Deny from 2001:4878:8103::/48
-Deny from 2001:4878:8136::/48
 Deny from 2001:4878:8151::/48
 Deny from 2001:4878:8164::/48
+Deny from 2001:4878:8173::/48
 Deny from 2001:4878:81e0::/44
 Deny from 2001:4878:8204::/48
 Deny from 2001:4878:8215::/48
@@ -50737,20 +50701,19 @@ Deny from 2001:4878:8225::/48
 Deny from 2001:4878:8228::/48
 Deny from 2001:4878:8246::/48
 Deny from 2001:4878:8321::/48
-Deny from 2001:4878:8322::/47
+Deny from 2001:4878:8323::/48
 Deny from 2001:4878:8324::/48
 Deny from 2001:4878:8347::/48
 Deny from 2001:4878:8356::/48
 Deny from 2001:4878:a007::/48
-Deny from 2001:4878:a008::/48
 Deny from 2001:4878:a027::/48
 Deny from 2001:4878:a031::/48
 Deny from 2001:4878:a037::/48
 Deny from 2001:4878:a038::/48
 Deny from 2001:4878:a048::/48
 Deny from 2001:4878:a062::/48
-Deny from 2001:4878:a136::/48
 Deny from 2001:4878:a151::/48
+Deny from 2001:4878:a173::/48
 Deny from 2001:4878:a204::/48
 Deny from 2001:4878:a215::/48
 Deny from 2001:4878:a216::/48
@@ -50759,26 +50722,24 @@ Deny from 2001:4878:a225::/48
 Deny from 2001:4878:a228::/48
 Deny from 2001:4878:a246::/48
 Deny from 2001:4878:a321::/48
-Deny from 2001:4878:a322::/47
+Deny from 2001:4878:a323::/48
 Deny from 2001:4878:a324::/48
 Deny from 2001:4878:a347::/48
 Deny from 2001:4878:a356::/48
 Deny from 2001:4878:b007::/48
-Deny from 2001:4878:b008::/48
 Deny from 2001:4878:b027::/48
 Deny from 2001:4878:b031::/48
 Deny from 2001:4878:b037::/48
 Deny from 2001:4878:b038::/48
 Deny from 2001:4878:b048::/48
-Deny from 2001:4878:b136::/48
 Deny from 2001:4878:b151::/48
+Deny from 2001:4878:b173::/48
 Deny from 2001:4878:b216::/48
 Deny from 2001:4878:b220::/48
 Deny from 2001:4878:b225::/48
 Deny from 2001:4878:b228::/48
 Deny from 2001:4878:b347::/48
 Deny from 2001:4878:c007::/48
-Deny from 2001:4878:c008::/48
 Deny from 2001:4878:c027::/48
 Deny from 2001:4878:c031::/48
 Deny from 2001:4878:c037::/48
@@ -50786,8 +50747,8 @@ Deny from 2001:4878:c038::/48
 Deny from 2001:4878:c048::/48
 Deny from 2001:4878:c062::/47
 Deny from 2001:4878:c103::/48
-Deny from 2001:4878:c136::/48
 Deny from 2001:4878:c164::/48
+Deny from 2001:4878:c173::/48
 Deny from 2001:4878:c1e0::/44
 Deny from 2001:4878:c204::/48
 Deny from 2001:4878:c215::/48
@@ -50799,7 +50760,7 @@ Deny from 2001:4878:c246::/48
 Deny from 2001:4878:c254::/48
 Deny from 2001:4878:c270::/47
 Deny from 2001:4878:c321::/48
-Deny from 2001:4878:c322::/47
+Deny from 2001:4878:c323::/48
 Deny from 2001:4878:c324::/48
 Deny from 2001:4878:c347::/48
 Deny from 2001:489a:2102::/62
@@ -50888,9 +50849,6 @@ Deny from 2001:8004:5100:967::/64
 Deny from 2001:b032:104::/48
 Deny from 2400:11c0::/32
 Deny from 2400:18a0:1001::/48
-Deny from 2400:2000:6::/47
-Deny from 2400:2000:b::/48
-Deny from 2400:2000:c::/48
 Deny from 2400:3200::/32
 Deny from 2400:3240::/32
 Deny from 2400:3b00::/47
@@ -51278,7 +51236,8 @@ Deny from 2404:4e00:101::/48
 Deny from 2404:4e00:102::/47
 Deny from 2404:4e00:104::/47
 Deny from 2404:4e00:200::/46
-Deny from 2404:4e00:204::/48
+Deny from 2404:4e00:204::/47
+Deny from 2404:4e00:206::/48
 Deny from 2404:4e00:1003::/48
 Deny from 2404:4e00:1083::/48
 Deny from 2404:4e00:2000::/48
@@ -51988,12 +51947,9 @@ Deny from 2600:3c0f:10::/47
 Deny from 2600:3c0f:13::/48
 Deny from 2600:3c0f:14::/46
 Deny from 2600:3c0f:18::/47
-Deny from 2600:3c0f:20::/46
-Deny from 2600:3c0f:25::/48
-Deny from 2600:3c0f:26::/47
+Deny from 2600:3c0f:20::/45
 Deny from 2600:3c0f:28::/47
 Deny from 2600:3c0f:30::/48
-Deny from 2600:3c0f:db::/48
 Deny from 2600:4041:5340:f000::/64
 Deny from 2600:4041:54c1:d000::/64
 Deny from 2600:4041:5c2c:dc00::/64
@@ -54333,16 +54289,14 @@ Deny from 2606:6c00:100::/47
 Deny from 2606:6c00:104::/46
 Deny from 2606:6c00:108::/47
 Deny from 2606:6c00:120::/44
-Deny from 2606:6c00:200::/46
-Deny from 2606:6c00:204::/47
-Deny from 2606:6c00:207::/48
+Deny from 2606:6c00:200::/45
+Deny from 2606:6c00:20a::/48
 Deny from 2606:6c00:2000::/48
 Deny from 2606:6c00:4000::/48
 Deny from 2606:6c00:6001::/48
 Deny from 2606:6c00:6002::/47
 Deny from 2606:6c00:6004::/48
 Deny from 2606:6c00:8000::/48
-Deny from 2606:6c00:a000::/48
 Deny from 2606:6c00:c000::/48
 Deny from 2606:6c00:ffff::/48
 Deny from 2606:6c40::/32
@@ -54735,6 +54689,7 @@ Deny from 2620:1ec:a92::/48
 Deny from 2620:1ec:bdf::/48
 Deny from 2620:1ec:c11::/48
 Deny from 2800:120::/32
+Deny from 2800:280:4001::/48
 Deny from 2800:6c0::/32
 Deny from 2801:80:c00::/48
 Deny from 2801:80:1610::/48
@@ -54761,7 +54716,6 @@ Deny from 2803:ad80:16::/48
 Deny from 2803:ad80:69::/48
 Deny from 2803:d4a0::/32
 Deny from 2804:218::/32
-Deny from 2804:3f8:1:d::/64
 Deny from 2804:49c:13::/48
 Deny from 2804:49c:31::/48
 Deny from 2804:49c:3403::/48
@@ -55166,8 +55120,7 @@ Deny from 2a01:6ca0::/32
 Deny from 2a01:6e60::/32
 Deny from 2a01:77e0::/32
 Deny from 2a01:7860::/32
-Deny from 2a01:7e00::/31
-Deny from 2a01:7e03::/32
+Deny from 2a01:7e00::/30
 Deny from 2a01:7e04::/32
 Deny from 2a01:8046::/36
 Deny from 2a01:8100:1::/48
@@ -55300,9 +55253,9 @@ Deny from 2a02:2370:101::/48
 Deny from 2a02:2370:102::/47
 Deny from 2a02:2370:104::/47
 Deny from 2a02:2370:106::/48
-Deny from 2a02:2370:200::/46
-Deny from 2a02:2370:204::/47
-Deny from 2a02:2370:206::/48
+Deny from 2a02:2370:200::/45
+Deny from 2a02:2370:208::/48
+Deny from 2a02:2370:20a::/48
 Deny from 2a02:2370:1000::/48
 Deny from 2a02:2370:4000::/48
 Deny from 2a02:2370:8000::/48
@@ -56944,7 +56897,6 @@ Deny from 2a0b:2d87::/32
 Deny from 2a0b:3100::/39
 Deny from 2a0b:3240::/32
 Deny from 2a0b:35c0::/30
-Deny from 2a0b:35c4::/48
 Deny from 2a0b:3700::/29
 Deny from 2a0b:3880::/32
 Deny from 2a0b:3c40:50::/48
